Update the completed, change the close button to red, and fixed all errors

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                 </ul>
 
                 <h3 class="completed-title">Completed <span class="arrow">▲</span></h3>
+                <ul id="completedList" class="task-list"></ul>
             </section>
         </main>
     </div>
@@ -95,6 +96,7 @@
                             <label for="priority">Priority</label>
                             <div class="custom-select-wrapper">
                                 <select id="priority">
+                                    <option value="">None</option>
                                     <option value="High" selected>High</option>
                                     <option value="Medium">Medium</option>
                                     <option value="Low">Low</option>
